--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\User\\Downloads\\mysql-connector-java-8.0.17.jar
+file.reference.mysql-connector-java-8.0.17.jar=lib\\mysql-connector-java-8.0.17.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -37,9 +37,9 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.17.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
